# orie5270_project

./: .coverage  README.md  data_cache.db  main.py  pyproject.toml
src/quant_engine/: backtest.py  data_pipeline.py  features.py  ml_predictor.py  optimizer.py
src/quant_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_all.py
