[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_engine"
version = "0.1.0"
description = "ORIE 5270 Final Project: Walk-Forward Portfolio Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]